# raftcache

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
crates/raft-core/: Cargo.toml
crates/raft-core/src/: error.rs  event.rs  lib.rs  log.rs  message.rs  node.rs  types.rs
crates/raftcache-cli/: Cargo.toml
crates/raftcache-cli/src/: cli.rs  lib.rs  main.rs
crates/raftcache-cli/tests/: replicated_kv.rs
crates/raftcache-kv/: Cargo.toml
crates/raftcache-kv/src/: command.rs  lib.rs  store.rs
crates/raftcache-sim/: Cargo.toml
crates/raftcache-sim/benches/: replication.rs
crates/raftcache-sim/src/: cluster.rs  lib.rs  network.rs
docs/: architecture.md  raft-notes.md
docs/adr/: 0001-pure-state-machine-core.md  0002-deterministic-simulation.md  0003-scope-boundaries.md  0004-kv-as-replicated-state.md
scripts/: build.sh  demo.sh
