[workspace]
resolver = "3"
members = [
    "crates/raft-core",
    "crates/raftcache-kv",
    "crates/raftcache-sim",
    "crates/raftcache-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Joseph Edwards <josephleonedwards@gmail.com>"]
repository = "https://github.com/leisurelyleon/raftcache"
description = "A distributed, replicated key-value cache built on a deterministic Raft consensus core."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
