[package]
name = "raftcache-kv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The replicated key-value state machine applied to raftcache's committed log."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
