[package]
name = "raftcache-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic simulation harness for raftcache: virtual network, logical clock, safety checks."

[dependencies]
raft-core = { path = "../raft-core" }
